# KSpectrogram

./: .gitignore  .gitmodules  CMakeLists.txt  KSpectrogram.cmake  README.md
src/: BorderLayout.cpp  BorderLayout.h  ColorMap.h  KAnalysis.cpp  KAnalysis.h  KSpecWidget.cpp  KSpecWidget.h  KSpectrogram.cpp  KSpectrogram.h  LogSpec.h  main.cpp
